--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "@types/jest": "^27.5.2",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^16.18.25",
+    "@types/peerjs": "^1.1.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "jwt-decode": "^3.1.2",
+    "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
